29.oct (ws)
      - fix #13391: Sound continues after mute or solo
      - fix #13400: If a slur is moved, new position is not saved
      - fix #13034: Tie direction for chords
28.oct (ws)
      - more robust reading of corrupted file (#13357 corrupted key signature)
      - fix #13363: Recent change to repeat bar dot
      - fix #13364: Score tabs disappear
      - fix #13375: Dragging rest ot ledger lines and undo doesn't produce stave rest
      - fix: sometimes a tuplet bracket is left when deleting a whole measure
      - fix repeat ("r") command
      - overhaul tuplet handling
26.oct (ws)
      - new feature: dragging a staff/measure up/down increases/decreases staff distance
        in a system score wide. This changes the style parameter akkoladeDistance/staffDistance
        for a single staff.
25.oct (ws)
      - fix #13334: Page Break or Spacer not visible when import from musescore 1.1
      - extend meta data dialog: score creation date, MuseScore version/revision, api level
      - new testfile stafftest.mscx
      - various fixes for staves with lines != 5
      - more easy selection of barlines: clickable area is wider than actual barline
      - fix selection of bar line in one line staff
      - fix eps+pdf save in fotomode
24.oct (ws)
      - fix fotomode
      - fix beam selection (wrong shape)
      - fix drawing of shadow notes
      - fix #7402: Split staff drops lower notes
       (la)
      - fix #13301: add score.close() to plugin framework
      - fix #5433: Staff with one line and repeat bars are not aligned
22.oct (ws)
      - fix #13198: Crash on startup (patch from mokaspar)
19.oct (lv)
      - sync bww importer from 0.9.6 branch
       (la)
      - fix #13183: [MusicXML] Wrong import of right barline
12.oct (ws)
      - add framework for android player
8.oct (lv)
      - fix #12382: [MusicXML] Key Signature for 2 Staves
      (mi)
      - fix #12365: pitched staff -> TAB: accidentals remain (r.4850)